criado funcionalidade get e modelos

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#ativando aplicacao para teste - com isso vai buscar parametros no application-test.properties
+spring.profiles.active=test
+
+#serve para fechar as transacoes no service
+#necessario colocar a anotacao @Transactional nos métodos da service
+spring.jpa.open-in-view=false
 
